--- a/android/build.gradle
+++ b/android/build.gradle
@@ -29,6 +29,7 @@ allprojects {
         maven {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
+            maven { url 'https://www.jitpack.io' }
         }
 
         google()
