--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ui-kitten/metro-config": "5.1.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-ble-plx": "^2.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
