--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@types/react-native-i18n": "^2.0.0",
     "@ui-kitten/components": "5.1.1",
     "@ui-kitten/eva-icons": "5.1.1",
     "@ui-kitten/metro-config": "5.1.1",
@@ -21,6 +22,7 @@
     "react-native": "0.64.1",
     "react-native-ble-plx": "^2.0.2",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-i18n": "^2.0.15",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
