--- a/package.json
+++ b/package.json
@@ -20,13 +20,13 @@
     "@ui-kitten/metro-config": "5.1.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
-    "react-native-ble-plx": "^2.0.2",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
-    "react-native-tts": "^4.1.0"
+    "react-native-tts": "^4.1.0",
+    "react-native-bluetooth-classic": "1.60.0-rc.17"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
