--- a/package.json
+++ b/package.json
@@ -14,19 +14,23 @@
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.7",
+    "@tensorflow/tfjs": "^3.11.0",
+    "@tensorflow/tfjs-react-native": "^0.8.0",
     "@types/react-native-i18n": "^2.0.0",
     "@ui-kitten/components": "5.1.1",
     "@ui-kitten/eva-icons": "5.1.1",
     "@ui-kitten/metro-config": "5.1.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-bluetooth-classic": "1.60.0-rc.17",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-i18n": "^2.0.15",
     "react-native-safe-area-context": "^3.3.0",
     "react-native-screens": "^3.5.0",
     "react-native-svg": "^12.1.1",
     "react-native-tts": "^4.1.0",
-    "react-native-bluetooth-classic": "1.60.0-rc.17"
+    "react-redux": "^7.2.6",
+    "redux": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
