--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tensorflow/tfjs": "^3.11.0",
     "@tensorflow/tfjs-react-native": "^0.8.0",
     "@types/react-native-i18n": "^2.0.0",
+    "@types/react-redux": "^7.1.20",
     "@ui-kitten/components": "5.1.1",
     "@ui-kitten/eva-icons": "5.1.1",
     "@ui-kitten/metro-config": "5.1.1",
